--- a/templates/index.html
+++ b/templates/index.html
@@ -16,15 +16,15 @@
         <li>MEDV: Median Value of Owner-Occupied Homes</li>
     </ul>
     <h2>Prediction</h2>
-    <form action="/...." method=".....">
+    <form action="/prediction" method="POST">
         <label for="RM">RM:</label>
-        <input type="number" name="....." step="any" required>
+        <input type="number" name="RM" step="any" required>
         <br>
         <label for="LSTAT">LSTAT</label>
-        <input type="number" name="....." step="any" required>
+        <input type="number" name="LSTAT" step="any" required>
         <br>
         <label for="PTRATIO">PTRATIO</label>
-        <input type="number" name="....." step="any" required>
+        <input type="number" name="PTRATIO" step="any" required>
         <br>
         <button type="submit">Predict MEDV</button>
     </form>
