--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -10,9 +10,9 @@
 <body>
     <h1>MEDV Prediction</h1>
     {% if medv %}
-    <p>RM: {{ ... }}</p>
-    <p>LSTAT: {{ ... }}</p>
-    <p>PTRATIO: {{ ... }}</p>
+    <p>RM: {{ RM }}</p>
+    <p>LSTAT: {{ LSTAT }}</p>
+    <p>PTRATIO: {{ PTRATIO }}</p>
     <p>MEDV: Prediction {{ ...[0] }}</p>
     {% endif %}
     <br>
